// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiveOperator class will return a JSON representation of the dive operator 1`] = `
{
  "address": "3 Bay St, Tobermory, ON N0H 2R0, Canada",
  "banner": "https://diversden.ca/wp-content/uploads/2021/06/divers-den-banner.jpg",
  "createdAt": 2022-06-20T11:45:21.000Z,
  "description": "Welcome to Tobermory, the Scuba Diving Capital of Canada!
Discover the world below the waves of the Fathom Five National Marine Park, home to more than 20 shipwrecks.
Immerse yourself in the captivating history of century old ships and catch a glimpse of their haunting beauty.
Whether or not you are a certified scuba diver, you can explore this hidden world and have the experience of a lifetime.",
  "email": "info@diversden.ca",
  "gps": {
    "lat": 45.25484,
    "lon": -81.66554,
  },
  "id": "f6fc189e-126e-49ac-95aa-c2ffd9a03140",
  "logo": "https://diversden.ca/wp-content/uploads/2021/06/divers-den-logo.png",
  "name": "Diver's Den",
  "owner": {
    "avatar": "https://example.com/avatar.png",
    "location": "Toronto, ON, Canada",
    "logBookSharing": "public",
    "memberSince": 2021-06-10T03:00:00.000Z,
    "name": "Test User",
    "userId": "54ca5e54-de92-4e15-a523-4087c52b40eb",
    "username": "testuser",
  },
  "phone": "+1 519-596-2363",
  "socials": {
    "facebook": "diversdentobermory",
    "instagram": "diversden",
    "tiktok": "@diversden",
    "twitter": "diversden",
  },
  "updatedAt": 2024-07-29T11:45:21.000Z,
  "verified": true,
  "website": "https://diversden.ca",
}
`;

exports[`DiveOperator class will return a succinct JSON representation of the dive operator 1`] = `
{
  "address": "3 Bay St, Tobermory, ON N0H 2R0, Canada",
  "description": "Welcome to Tobermory, the Scuba Diving Capital of Canada!
Discover the world below the waves of the Fathom Five National Marine Park, home to more than 20 shipwrecks.
Immerse yourself in the captivating history of century old ships and catch a glimpse of their haunting beauty.
Whether or not you are a certified scuba diver, you can explore this hidden world and have the experience of a lifetime.",
  "email": "info@diversden.ca",
  "gps": {
    "lat": 45.25484,
    "lon": -81.66554,
  },
  "id": "f6fc189e-126e-49ac-95aa-c2ffd9a03140",
  "logo": "https://diversden.ca/wp-content/uploads/2021/06/divers-den-logo.png",
  "name": "Diver's Den",
  "phone": "+1 519-596-2363",
  "socials": {
    "facebook": "diversdentobermory",
    "instagram": "diversden",
    "tiktok": "@diversden",
    "twitter": "diversden",
  },
  "verified": true,
  "website": "https://diversden.ca",
}
`;
